# ohte

./: .coveragerc  .gitignore  README.md  data.db  mypy.ini  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  monopoli.md
src/: Sudoku.py  UI.py  database.py  helpers.py  main.py  sudoku.py  ui.py
src/tests/: database_test.py  helpers_test.py  sudoku_test.py
